Add first draft of reflection

--- a/CE4021-Etivity1.ipynb
+++ b/CE4021-Etivity1.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +326,7 @@
        "[[6, 2], [-35, 6]]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +366,7 @@
        "[[1, 0], [296, 36], [6000000, 999999]]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +406,7 @@
        "[[6, 2], [231, 2], [7744, 87]]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +521,7 @@
        "[[inf, 5], [4890, 814], [-3, 0]]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -560,7 +560,7 @@
        "[[inf, inf], [60, 5], [180, 5]]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +599,7 @@
        "[[-inf, 5], [1035, 44], [-80, 1]]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -645,7 +645,7 @@
        "[[20, 0], [-9.8, 1]]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -675,9 +675,44 @@
    "metadata": {},
    "source": [
     "Write your reflection in below cell. With reference to the Rubric for E-tivity 1:\n",
-    "- Provide an accurate description of your code with advantages and disadvantages of design choices.\n",
-    "- Compare your approach to alternative (peer) approaches.\n",
-    "- Clearly describe how you have used your peers' work/input and how this has affected your own understanding / insights.\n",
+    "### Provide an accurate description of your code with advantages and disadvantages of design choices.\n",
+    "\n",
+    "I first decided to read the task and the rubric and understand what was being asked of in the task. I saw a lot of discussion on the forum around using a string to represent an actual polynomial. I decided against this approach as (also mentioned in the discussions) the task asked for a symbolic input of a polynomial.\n",
+    "\n",
+    "The first choice was how to symbolically represent a polynomial. I knew that the hint in the task description, of using a list of only the coefficients and the position of that element as the power, would be fine for small order polynomials. However, as hint 2 suggested, it was impractical for higher orders. A possible answer came to me when reading Vaclav Krol post on using dictionaries. I knew I wanted to be able to have two terms with the same orders (as this is still a valid polynomial) and dictionaries didn't allow for this (sets also pose this same issue). However, I did like the idea of inputting both the coefficient and the power. The answer was then obvious to use either lists or tuples. Since processing these are the same in Python I decided to write my function to be able to handle either. It is only adding elements to either of these that sets them apart. This decision was cemented after reading posts and comments from Clarkes, Colemans, and Mitchs posts.\n",
+    "\n",
+    "I knew the output would be a list as a tuple is immutable but later I thought that you might want to return it as a tuple of tuples (as these are quicker to process). This is why I introduced the optional parameter return_tup_of_tups to my polynomial_differentiation function. It allows the user to decide what the output will be, although at the cost of taking longer to process. Below in the appendix I have done some time trials on the different inputs and edited my polynomial_differentiation function to handle dictionaries. Although dictionaries are faster (as expected because lookups are quicker for dictionaries) I decided for the flexibility of lists/tuples.\n",
+    "\n",
+    "In the body of my function I was first looping through each term and grabbing the coefficients and powers directly. After Mohammed AlJaaidi pointed out in my post that a constant could also be represented by a list with only one element I changed this. It now checks each term and add the power as zero if this is the case, making my code more robust, so thank you Mohammed.\n",
+    "\n",
+    "Once the values are available I then check to see if the power is greater then zero. As a polynomial does not have negative powers. After one of the Q&As with Pep where he said that None could be entered also I check for this here too. I decided to treat None as an error and not as zero because there are many reasons for None to appear in Python. I then check to see if the coefficient is None. Either of these ends the function because a valid polynomial was not entered. This was a personal choice based on these attributes however I know Peter O'Mahony evaluates it as zero which allows the function to succeed more as it is less strict.\n",
+    "\n",
+    "The last check is to see if either the coefficient or the power are zero. If this is the case it uses pass and moves on to the next term of the polynomial, as this will be treated as zero.\n",
+    "\n",
+    "All of these checks slow down the function (although arguably negligibly) but make the function more robust.\n",
+    "\n",
+    "Then I perform the power rule on the term and add it to the output list.\n",
+    "\n",
+    "After all elements of the input are looped through I return the differentiation.\n",
+    "\n",
+    "### Compare your approach to alternative (peer) approaches.\n",
+    "\n",
+    "As mentioned above many solutions use string parsing to end up with their symbolic polynomial before differentiating. Although it is an interesting approach, neither the task or the rubric asked for this so I decided against it.\n",
+    "\n",
+    "The main difference between solutions is the choice of input. This is all down to personal choice. Some like Phil Clarke, Deventhiran Ranganathan, Vaclav Krol, and Liam Mulcahy used dictionaries, opting for speed over flexibility. Some like Bartlomiej Mlynarkiewicz, Mitchell DeBruyn, Godfrey Jeremiah, and Aurelie Montfrond used a list to represent coefficients and the position of the element then would represent the power. This is great for small order polynomials but the higher order you go the more inefficient it gets. Pierce Currid, Julieta Rubis, and I used similar approaches with a combination of lists or tuples inside a list or tuples. I haven't fully gone through the others code enough to confirm but I suspect any combination of lists and tuples will work with their solution. Jason Coleman uses a combination of a set and tuples for space-efficiency although I don't know how these match up in comparison to dictionaries or just tuple of tuples.\n",
+    "\n",
+    "I chose flexibility over all else. The tests in the Appendix show there is not much in the difference for the speed and I didn't think space was a factor for this exercise.\n",
+    "\n",
+    "The second difference after input is how to evaluate the input for potential problems. I like many others have checked for less the zero values for the exponential. There is possibility to have the function work for negatives but I decided to be strict in my approach to only differentiate polynomials. At the time of writing this I have found no other solution that checks for None values in the symbolic polynomial, I added this (as stated earlier) after one of the Q&A sessions where Pep mentions it.\n",
+    "\n",
+    "### Clearly describe how you have used your peers' work/input and how this has affected your own understanding / insights.\n",
+    "\n",
+    "- Although I was describing the theory behind differentiation of a polynomial and using the power rule in my function I realised after looking through Jason Colemans and Mitchell DeBruyns notebooks that I had not described the power rule. Thanks to them there is not a connection to what is used in the function and the theory.\n",
+    "\n",
+    "- As mentioned earlier Vaclav Krol made me consider dictionaries as a choice of input. Along with posts/comments from Mitchell DeBruyn and Jason Coleman these helped me cement my decision of a list of lists or a tuple of tuples.\n",
+    "\n",
+    "- I though Phil Clarkes addition of references was a nice touch so I did the same.\n",
+    "\n",
     "\n",
     "If you have not used peer input, you may state this, but your submission history in Gitlab should clearly show this is the case."
    ]
@@ -709,9 +744,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is for first\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.91 µs ± 429 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n",
+      "1.44 µs ± 64.6 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n",
+      "1.2 µs ± 65.6 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n",
+      "This is for second\n",
+      "1.93 µs ± 158 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n",
+      "2.35 µs ± 101 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n",
+      "1.46 µs ± 92.4 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n",
+      "This is for third\n",
+      "2.85 µs ± 169 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n",
+      "2.85 µs ± 351 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n",
+      "1.99 µs ± 83.9 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n",
+      "This is for fourth\n",
+      "3.5 µs ± 355 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n",
+      "3.64 µs ± 279 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n",
+      "2.64 µs ± 225 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
+     ]
+    }
+   ],
    "source": [
     "def dict_polynomial_differentiation(input_polynomial):\n",
     "\n",
@@ -753,22 +817,22 @@
     "dict4 = {1:2,3:4,7:8,3:1000,45:36000,234:600000000}\n",
     "\n",
     "# Uncomment/Comment the below to turn on/off the time tests. I have turned them off because they take a considerable time to run in comparison to the rest of the notebook.\n",
-    "# print(\"This is for first\")\n",
-    "# %timeit polynomial_differentiation(x1)\n",
-    "# %timeit polynomial_differentiation(y1)\n",
-    "# %timeit dict_polynomial_differentiation(dict1)\n",
-    "# print(\"This is for second\")\n",
-    "# %timeit polynomial_differentiation(x2)\n",
-    "# %timeit polynomial_differentiation(y2)\n",
-    "# %timeit dict_polynomial_differentiation(dict2)\n",
-    "# print(\"This is for third\")\n",
-    "# %timeit polynomial_differentiation(x3)\n",
-    "# %timeit polynomial_differentiation(y3)\n",
-    "# %timeit dict_polynomial_differentiation(dict3)\n",
-    "# print(\"This is for fourth\")\n",
-    "# %timeit polynomial_differentiation(x4)\n",
-    "# %timeit polynomial_differentiation(y4)\n",
-    "# %timeit dict_polynomial_differentiation(dict4)"
+    "print(\"This is for first\")\n",
+    "%timeit polynomial_differentiation(x1)\n",
+    "%timeit polynomial_differentiation(y1)\n",
+    "%timeit dict_polynomial_differentiation(dict1)\n",
+    "print(\"This is for second\")\n",
+    "%timeit polynomial_differentiation(x2)\n",
+    "%timeit polynomial_differentiation(y2)\n",
+    "%timeit dict_polynomial_differentiation(dict2)\n",
+    "print(\"This is for third\")\n",
+    "%timeit polynomial_differentiation(x3)\n",
+    "%timeit polynomial_differentiation(y3)\n",
+    "%timeit dict_polynomial_differentiation(dict3)\n",
+    "print(\"This is for fourth\")\n",
+    "%timeit polynomial_differentiation(x4)\n",
+    "%timeit polynomial_differentiation(y4)\n",
+    "%timeit dict_polynomial_differentiation(dict4)"
    ]
   }
  ],
