fix evaluation and add tests

--- a/CE4021-Etivity1.ipynb
+++ b/CE4021-Etivity1.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,31 +62,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Task"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "You may add as many cells as you require to complete this task. Refer to the Rubric for E-tivity 1 to see how you will be assessed."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Showing excellent understanding of polynomial derivatives / integrals.\n",
+    "# Task\n",
     "\n",
-    "### Understanding Polynomial derivatives\n",
+    "## Understanding Polynomial derivatives\n",
     "\n",
-    "#### What are polynomials?\n",
+    "### What are polynomials?\n",
     "\n",
     "A polynomial is a mathematical equation consisting of variables and coefficients. A polynomial can have any number of coefficients and variables, and the variables can have any order of power that is a positive integer.\n",
     "\n",
     "Example of a polynomial: $ y(x) = 3x^3 - 5x^2 + 2x - 1 $\n",
     "\n",
-    "##### Equation for Vertical Motion\n",
+    "#### Equation for Vertical Motion\n",
     "\n",
     "Polynomials are equations that can be used to describe linear processes. One specific one can describe an object being fired directly up into the air, also known as the \"equation for vertical motion\". For the sake of this example we will fire our ball from ground level within a vacuum (i.e. it is not effected by air currents, wind resistance etc). The equation for vertical motion is a polynomial that represents the vertical displacement ($ h $) as a function of time ($ t $) with respect to the initial velocity ($ V_{iy} $), and acceleration/deceleration due to gravity ($ g $).\n",
     "\n",
@@ -94,7 +80,7 @@
     "    h(t) = V_{iy}t - \\frac{1}{2}gt^2\n",
     "\\end{equation}\n",
     "\n",
-    "#### Differentiation of a polynomial\n",
+    "### Differentiation of a polynomial\n",
     "\n",
     "What if I wanted to find the velocity of the object ($ V_{y} $) at a time ($ t $)? Velocity is the change is distance (measured in meters m) divided by a change in time (measured in seconds s), or $ \\frac{m}{s} $). Our equation above gets the displacement for a given time. If we were to get the velocity between two points in time we could get the displacement at one time $ t $ subtract it from the displacement at another time a little further on $ \\delta t $ and divide it by the difference between the two times:\n",
     "\n",
@@ -148,7 +134,7 @@
     "\n",
     "Getting this instantaneous rate of change can be found for any function that can be differentiated. It is a way of getting a new function to best approximate the slope of a tangent for any given point for your original function.\n",
     "\n",
-    "##### The Power Rule\n",
+    "### The Power Rule\n",
     "\n",
     "There is a rule for this type of differentiation, when dealing with a variable with a power, named the power rule. Taking the power of the variable, multiplying that by the whole term and then taking 1 from that power:\n",
     "\n",
@@ -172,14 +158,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Implementation\n",
-    "\n",
-    "Correctly working implementation with efficient use of flow control elements, data types and operators. Clean code with appropriate variable names.  Appropriate documentation of each function."
+    "## Implementation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +221,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Evaluating a polynomial for a given value\n",
+    "## Evaluating a polynomial for a given value\n",
     "\n",
     "To evaluate a polynomial we simple enter the variable into the polynomial.\n",
     "\n",
@@ -258,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,15 +264,24 @@
     "\n",
     "    # var to hold the addition of each term of the differentiated polynomial to produce a scalar\n",
     "    scalar = 0\n",
-    "    # check to see if input is a number\n",
-    "    if isinstance(known_var, (int, float)):\n",
-    "        # Use the input variable to calculate the term and add it to make up the scalar\n",
-    "        for coefficient, power in input_polynomial:\n",
-    "            scalar += (known_var**power)*coefficient\n",
-    "    # if not a number provide feedback and end it\n",
-    "    else:\n",
-    "        print(f\"Float or int needed for calculation {type(known_var)} used.\")\n",
-    "        return\n",
+    "    # for each term of the polynomial\n",
+    "    for term in input_polynomial:\n",
+    "        # check to see if input is a number\n",
+    "        if isinstance(known_var, (int, float)):\n",
+    "            # if only one element or power is 0 in the list representing a term treat as a constant\n",
+    "            if len(term) == 1 or term[1] == 0:\n",
+    "                scalar += term[0]\n",
+    "            elif term[0] == 0:\n",
+    "                scalar += known_var**term[1]\n",
+    "            # else grab the coefficient and the power for the term\n",
+    "            else:\n",
+    "                coefficient, var_power = term\n",
+    "                # Use the input variable to calculate the term and add it to make up the scalar\n",
+    "                scalar += (known_var**var_power)*coefficient\n",
+    "        # if not a number provide feedback and end it\n",
+    "        else:\n",
+    "            print(f\"Float or int needed for calculation {type(known_var)} used.\")\n",
+    "            return\n",
     "\n",
     "    return scalar"
    ]
@@ -297,9 +290,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Testing\n",
+    "## Testing\n",
     "\n",
-    "Below I will work through test polynomials first with math using the power rule and then the above function to compare results.\n",
+    "### Testing differentiation of polynomials\n",
+    "\n",
+    "Below I will work through testing polynomials first with math using the power rule and then the above function to compare results.\n",
     "\n",
     "#### Test 1: 0 Exponential (constant) and minus coefficient \n",
     "TODO: Add line in doc string to explain adding constants with 0 exp\n",
@@ -317,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +321,7 @@
        "[[6, 2], [-35, 6]]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +361,7 @@
        "[[1, 0], [296, 36], [6000000, 999999]]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +401,7 @@
        "[[6, 2], [231, 2], [7744, 87]]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -521,7 +516,7 @@
        "[[inf, 5], [4890, 814], [-3, 0]]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -560,7 +555,7 @@
        "[[inf, inf], [60, 5], [180, 5]]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -590,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +594,7 @@
        "[[-inf, 5], [1035, 44], [-80, 1]]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -636,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -645,15 +640,121 @@
        "[[20, 0], [-9.8, 1]]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Test 8\n",
-    "inf_poly_coef = [[20, 1], [-4.9, 2]]\n",
-    "polynomial_differentiation(inf_poly_coef)"
+    "vert_motion_poly = [[20, 1], [-4.9, 2]]\n",
+    "polynomial_differentiation(vert_motion_poly)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Testing evaluation for a known variable for a polynomial\n",
+    "\n",
+    "#### Test 1\n",
+    "\n",
+    "Polynomial: \n",
+    "\n",
+    "$$ f(x) = 34x - 5x^2 + 23x^{14} $$\n",
+    "\n",
+    "Evaluation at $ x = 3 $:\n",
+    "\n",
+    "$$ f(3) = 34(3) - 5(3)^2 + 23(3)^{14} = 110,008,434 $$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "110008434"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "poly_eval_1 = [[34, 1], [5, 2], [23, 14]]\n",
+    "evaluate_polynomial(poly_eval_1, 3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Test 2\n",
+    "\n",
+    "Polynomial: \n",
+    "\n",
+    "$$ f(y) = y + 10y^{26} + 10y^{14} $$\n",
+    "\n",
+    "Evaluation at $ y = 6 $:\n",
+    "\n",
+    "$$ f(6) = 6 + 10(6)^{26} + 10(6)^{14} = 1,705,817,282,579,423,723,526 $$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1705817282579423723526"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "poly_eval_2 = [[0, 1], [10, 26], [10, 14]]\n",
+    "evaluate_polynomial(poly_eval_2, 6)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Test 3\n",
+    "\n",
+    "Earlier we evaluated the polynomial that represents the equation for vertical motion for a time of 2 seconds. It had an initial velocity of $ 20 m/s $ and acceleration due to gravity as $ 9.81 m/s^2 $. It was evaluated as $ 20.4 m $:\n",
+    "\n",
+    "$$ h(2) = 20(2) - (4.9)(2^2) = 20.4 m $$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20.4"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vert_motion_poly_eval = [[20, 1], [-4.9, 2]]\n",
+    "evaluate_polynomial(vert_motion_poly_eval, 2)"
    ]
   },
   {
@@ -744,38 +845,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "This is for first\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.91 µs ± 429 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n",
-      "1.44 µs ± 64.6 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n",
-      "1.2 µs ± 65.6 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n",
-      "This is for second\n",
-      "1.93 µs ± 158 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n",
-      "2.35 µs ± 101 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n",
-      "1.46 µs ± 92.4 ns per loop (mean ± std. dev. of 7 runs, 1,000,000 loops each)\n",
-      "This is for third\n",
-      "2.85 µs ± 169 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n",
-      "2.85 µs ± 351 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n",
-      "1.99 µs ± 83.9 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n",
-      "This is for fourth\n",
-      "3.5 µs ± 355 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n",
-      "3.64 µs ± 279 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n",
-      "2.64 µs ± 225 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def dict_polynomial_differentiation(input_polynomial):\n",
     "\n",
@@ -817,22 +889,22 @@
     "dict4 = {1:2,3:4,7:8,3:1000,45:36000,234:600000000}\n",
     "\n",
     "# Uncomment/Comment the below to turn on/off the time tests. I have turned them off because they take a considerable time to run in comparison to the rest of the notebook.\n",
-    "print(\"This is for first\")\n",
-    "%timeit polynomial_differentiation(x1)\n",
-    "%timeit polynomial_differentiation(y1)\n",
-    "%timeit dict_polynomial_differentiation(dict1)\n",
-    "print(\"This is for second\")\n",
-    "%timeit polynomial_differentiation(x2)\n",
-    "%timeit polynomial_differentiation(y2)\n",
-    "%timeit dict_polynomial_differentiation(dict2)\n",
-    "print(\"This is for third\")\n",
-    "%timeit polynomial_differentiation(x3)\n",
-    "%timeit polynomial_differentiation(y3)\n",
-    "%timeit dict_polynomial_differentiation(dict3)\n",
-    "print(\"This is for fourth\")\n",
-    "%timeit polynomial_differentiation(x4)\n",
-    "%timeit polynomial_differentiation(y4)\n",
-    "%timeit dict_polynomial_differentiation(dict4)"
+    "# print(\"This is for first\")\n",
+    "# %timeit polynomial_differentiation(x1)\n",
+    "# %timeit polynomial_differentiation(y1)\n",
+    "# %timeit dict_polynomial_differentiation(dict1)\n",
+    "# print(\"This is for second\")\n",
+    "# %timeit polynomial_differentiation(x2)\n",
+    "# %timeit polynomial_differentiation(y2)\n",
+    "# %timeit dict_polynomial_differentiation(dict2)\n",
+    "# print(\"This is for third\")\n",
+    "# %timeit polynomial_differentiation(x3)\n",
+    "# %timeit polynomial_differentiation(y3)\n",
+    "# %timeit dict_polynomial_differentiation(dict3)\n",
+    "# print(\"This is for fourth\")\n",
+    "# %timeit polynomial_differentiation(x4)\n",
+    "# %timeit polynomial_differentiation(y4)\n",
+    "# %timeit dict_polynomial_differentiation(dict4)"
    ]
   }
  ],
